--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@
     <header>
         <h1>Welcome to our website</h1>
     </header>
+    <main>
+        <div class="container">
+            <h2>Our produkts</h2>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum voluptas minus fugit placeat doloribus ab quibusdam reprehenderit accusantium porro asperiores ut mollitia, eos, minima sit temporibus esse illo eum unde?
+            </p>
+        </div>
+    </main>
 </body>
 </html>
