--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
             </p>
         </div>
     </main>
+    <footer>
+        <p>
+            &copy;Bu nimaligini bilmeman
+        </p>
+    </footer>
 </body>
 </html>
