--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </main>
     <footer>
         <p>
-            &copy;Bu nimaligini bilmeman
+            &copy;Bu nimaligini bilmeman Lekin qizziq
         </p>
     </footer>
 </body>
