--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </main>
     <footer>
         <p>
-            &copy;Bu nimaligini bilmeman Lekin qizziq
+            &copy;Asosiy sahifaga qaytish:
         </p>
     </footer>
 </body>
