--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </main>
     <footer>
         <p>
-            &copy;Asosiy sahifaga qaytish:
+            &copy;Asosiy sahifaga qaytish:22222
         </p>
     </footer>
 </body>
